--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -27,6 +27,15 @@ footer {
     }
 }
 
+@media (min-width: 560px) and (max-width: 767px) {
+    .footer-wrapper {
+        max-width: 525px;
+        display: grid;
+        grid-template-columns: 135px 142px 191px;
+        gap: 46px;
+    }
+}
+
 @media (min-width: 768px) {
     footer {
         padding-top: 80px;
