--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,7 +23,7 @@ $price-text: #1b1c21;
 }
 
 body {
-    padding: 1rem;
+    position: relative;
     margin: 0;
     background-color: $background-color;
 }
