--- a/src/scss/side-menu.scss
+++ b/src/scss/side-menu.scss
@@ -1,22 +1,24 @@
 .side-menu {
     position: absolute;
     background-color: $item-background;
-    width: 100%;
+    width: 113vw;
+    height: 100vh;
     left: 0;
-    top: 98px;
+    top: 80px;
     z-index: 2;
+    position: fixed;
     .header-navigation {
         display: none;
     }
 }
 
 .nav-list {
-    padding-top: 46px;
+    padding-top: 15px;
     padding-left: 24px;
     ul {
         display: flex;
         flex-direction: column;
-        gap: 32px;
+        gap: 9px;
         margin-left: -24px;
     }
     a {
@@ -48,7 +50,7 @@
     flex-direction: row;
     gap: 16px;
     padding-left: 24px;
-    padding-top: 268px;
+    padding-top: 25px;
     padding-bottom: 16px;
 }
 
@@ -99,6 +101,7 @@
 @media (min-width: 1120px) {
     .side-menu.hidden {
         display: block;
+        z-index: 0;
     }
     .side-menu {
         top: 0;
@@ -112,6 +115,9 @@
         }
         .header-navigation::after {
             display: none;
+        }
+        .nav-list__icon-menu {
+            padding-top: 141px;
         }
     }
 }
