--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,9 +5,6 @@
     text-decoration: none;
 }
 
-
-/* Header */
-
 .header {
     width: 100%;
 }
@@ -46,10 +43,6 @@
     border-radius: 50%;
 }
 
-.header-navigation__svg:hover {
-    opacity: 0.6;
-}
-
 .header-nav__item {
     display: flex;
     justify-content: center;
@@ -58,10 +51,6 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-}
-
-.header-nav__item:hover {
-    opacity: 0.6;
 }
 
 .header-nav__list {
@@ -128,14 +117,6 @@
 .main__nav {
     display: flex;
     margin-left: 16px;
-}
-
-.caption-nav__img:hover {
-    opacity: 0.6;
-}
-
-.caption-name:hover {
-    opacity: 0.6;
 }
 
 .caption-name {
@@ -219,6 +200,21 @@
 .main__description_png {
     width: 7px;
     height: 10px;
+}
+
+@media (min-width: 525px) and (max-width: 767px) {
+    .header_wrapper {
+        max-width: 525px;
+    }
+    .caption-wrapper {
+        margin-left: 0px;
+    }
+    .main__content {
+        padding-top: 20px;
+        max-width: 525px;
+        display: grid;
+        grid-template-columns: 250px 150px;
+    }
 }
 
 @media (min-width: 768px) {
