--- a/src/scss/call.scss
+++ b/src/scss/call.scss
@@ -31,7 +31,7 @@
         line-height: 40px;
         padding: 24px 16px;
     }
-    form h1::before {
+    .caption__title_blue:before {
         content: '';
         position: absolute;
         height: 40px;
